--- a/CommandService/src/CommandService/CommandService.csproj
+++ b/CommandService/src/CommandService/CommandService.csproj
@@ -13,7 +13,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="7.2.0" />
-    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.3.68" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Common/Common.csproj" />
   </ItemGroup>
 </Project>
