--- a/CourseDDBStreamConsumer/src/CourseDDBStreamConsumer/CourseDDBStreamConsumer.csproj
+++ b/CourseDDBStreamConsumer/src/CourseDDBStreamConsumer/CourseDDBStreamConsumer.csproj
@@ -14,7 +14,9 @@
     <PackageReference Include="Amazon.Lambda.Core" Version="2.1.0" />
     <PackageReference Include="Amazon.Lambda.DynamoDBEvents" Version="2.1.1" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.3.0" />
-    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.4.6" />
     <PackageReference Include="AWSSDK.EventBridge" Version="3.7.5.54" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Common/Common.csproj" />
   </ItemGroup>
 </Project>
