add course projector setup

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ DDBStreamConsumer/src/DDBStreamConsumer/obj
 
 Common/bin
 Common/obj
+
+CourseProjector/src/CourseProjector/bin
+CourseProjector/src/CourseProjector/obj
